added user and item coverage for  diversity experiments, draft for Intra-List Diversity

--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -464,34 +464,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "####### EXPRIMENTS #######\n",
+    "####### CSP EXPRIMENTS #######\n",
     "### CSP #### note: if the ratio==1, rerun from the first step\n",
-    "def csp_test_gen(train_data, test_data, unique_data, entity_index, experiment_abbr):\n",
-    "    print(entity_index)\n",
-    "    print(experiment_abbr)\n",
-    "    train_data_unique_entities = set(train_data['user', 'rates', 'item'].edge_label_index[entity_index].unique().numpy())\n",
-    "    print('1', len(train_data_unique_entities))\n",
-    "    unique_entities = set(unique_data['mappedID'].unique())\n",
-    "    print('2', len(unique_entities))\n",
-    "    entities_not_in_train = unique_entities - train_data_unique_entities\n",
-    "    print('3', len(entities_not_in_train))\n",
-    "    mask = torch.tensor([entity in entities_not_in_train for entity in test_data[\"user\", \"rates\", \"item\"].edge_label_index[entity_index].numpy()])\n",
-    "    print(mask)\n",
-    "    \n",
-    "    test_data_filtered = copy.deepcopy(test_data)\n",
-    "    test_data_filtered[\"user\", \"rates\", \"item\"].edge_label_index = test_data_filtered[\"user\", \"rates\", \"item\"].edge_label_index[:, mask]\n",
-    "    test_data_filtered[\"user\", \"rates\", \"item\"].edge_label = test_data_filtered[\"user\", \"rates\", \"item\"].edge_label[mask]\n",
-    "    \n",
-    "    ratio = len(test_data_filtered[\"user\", \"rates\", \"item\"].edge_label_index[entity_index]) / len(test_data[\"user\", \"rates\", \"item\"].edge_label_index[entity_index])\n",
-    "    print(f'test to train ratio {experiment_abbr}', ratio)\n",
-    "    \n",
-    "    return test_data_filtered, ratio\n",
+    "if experiment == 'csp':\n",
+    "    def csp_test_gen(train_data, test_data, unique_data, entity_index, experiment_abbr):\n",
+    "        print(entity_index)\n",
+    "        print(experiment_abbr)\n",
+    "        train_data_unique_entities = set(train_data['user', 'rates', 'item'].edge_label_index[entity_index].unique().numpy())\n",
+    "        print('1', len(train_data_unique_entities))\n",
+    "        unique_entities = set(unique_data['mappedID'].unique())\n",
+    "        print('2', len(unique_entities))\n",
+    "        entities_not_in_train = unique_entities - train_data_unique_entities\n",
+    "        print('3', len(entities_not_in_train))\n",
+    "        mask = torch.tensor([entity in entities_not_in_train for entity in test_data[\"user\", \"rates\", \"item\"].edge_label_index[entity_index].numpy()])\n",
+    "        print(mask)\n",
+    "        \n",
+    "        test_data_filtered = copy.deepcopy(test_data)\n",
+    "        test_data_filtered[\"user\", \"rates\", \"item\"].edge_label_index = test_data_filtered[\"user\", \"rates\", \"item\"].edge_label_index[:, mask]\n",
+    "        test_data_filtered[\"user\", \"rates\", \"item\"].edge_label = test_data_filtered[\"user\", \"rates\", \"item\"].edge_label[mask]\n",
+    "        \n",
+    "        ratio = len(test_data_filtered[\"user\", \"rates\", \"item\"].edge_label_index[entity_index]) / len(test_data[\"user\", \"rates\", \"item\"].edge_label_index[entity_index])\n",
+    "        print(f'test to train ratio {experiment_abbr}', ratio)\n",
+    "        \n",
+    "        return test_data_filtered, ratio\n",
     "\n",
-    "test_data_csp, test_to_train_ratio_csp = csp_test_gen(\n",
-    "    train_data, test_data, unique_user_id, 0 if experiment == 'ucsp' else 1, 'CSP-user' if experiment == 'ucsp' else 'CSP-item'\n",
-    ")\n",
+    "    test_data_csp, test_to_train_ratio_csp = csp_test_gen(\n",
+    "        train_data, test_data, unique_user_id, 0 if experiment == 'ucsp' else 1, 'CSP-user' if experiment == 'ucsp' else 'CSP-item'\n",
+    "    )\n",
     "\n",
-    "# TODO Diversity\n",
     "\n",
     "# TODO Contract Representation (effect of f top-keywords in contract_feat)\n",
     "\n",
@@ -1022,7 +1022,7 @@
     "    hit = np.sum(top_k_labels > 0)\n",
     "    return hit / min(num_ones, k) # k\n",
     "\n",
-    "def hit_at_k(k, ground_truth, pred, user_ids, edge_index):\n",
+    "def average_hit_at_k(k, ground_truth, pred, user_ids, edge_index):\n",
     "    precisions = []\n",
     "    for user_id in tqdm(user_ids, total=len(user_ids)):\n",
     "        mask = edge_index[0] == user_id\n",
@@ -1149,14 +1149,14 @@
     "        \n",
     "    return np.mean(average_precisions)\n",
     "\n",
-    "def evaluate(k_values, test_data_prime, ground_truth, pred):\n",
-    "    edge_index = test_data_prime['user', 'rates', 'item'].edge_label_index\n",
+    "def evaluate(k_values, test_data_all2all, ground_truth, pred):\n",
+    "    edge_index = test_data_all2all['user', 'rates', 'item'].edge_label_index\n",
     "    user_ids = np.unique(edge_index[0].numpy())\n",
     "\n",
     "    for k in k_values:\n",
     "        ### HIT@K ###\n",
-    "        hit_k = hit_at_k(k, ground_truth, pred, user_ids, edge_index)\n",
-    "        print(f\"HIT@{k}: {hit_k}\")\n",
+    "        hit_at_k = average_hit_at_k(k, ground_truth, pred, user_ids, edge_index)\n",
+    "        print(f\"HIT@{k}: {hit_at_k}\")\n",
     "    for k in k_values:\n",
     "        ### NDCG@K ###\n",
     "        ndcg_result = calculate_ndcg_at_k(k, ground_truth, pred, edge_index)\n",
@@ -1183,6 +1183,177 @@
     "}\n",
     "k_values = [1, 5, 10]\n",
     "evaluate(k_values, test_data_all2all, ground_truth=eval_loader[model_mode_eval]['ground_truth'], pred=eval_loader[model_mode_eval]['pred'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/565 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 565/565 [00:00<00:00, 1306.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item coverage diversity for gnn @1: 0.042488619119878605\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 565/565 [00:00<00:00, 1341.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item coverage diversity for gnn @5: 0.11836115326251896\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 565/565 [00:00<00:00, 1387.09it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item coverage diversity for gnn @10: 0.21547799696509864\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 565/565 [00:00<00:00, 1327.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User coverage for gnn @1: 0.06725663716814159\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 565/565 [00:00<00:00, 1392.68it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User coverage for gnn @5: 0.17699115044247787\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 565/565 [00:00<00:00, 1368.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User coverage for gnn @10: 0.27079646017699116\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "if experiment == 'diversity':\n",
+    "    edge_index = test_data_all2all['user', 'rates', 'item'].edge_label_index\n",
+    "    user_ids = np.unique(edge_index[0].numpy())\n",
+    "    pred = eval_loader[model_mode_eval]['pred']\n",
+    "    ground_truth = eval_loader[model_mode_eval]['ground_truth']\n",
+    "\n",
+    "    for k in k_values:\n",
+    "        recs_list = set()\n",
+    "        for user_id in tqdm(user_ids, total=len(user_ids)):\n",
+    "            mask = edge_index[0] == user_id\n",
+    "            filtered_pred = pred[mask]\n",
+    "            filtered_items = edge_index[1][mask]\n",
+    "            sorted_indices = np.argsort(filtered_pred)[::-1]\n",
+    "            top_k_indices = sorted_indices[:k]\n",
+    "            top_k_indices = top_k_indices.copy()\n",
+    "            top_k_items = filtered_items[top_k_indices].numpy()\n",
+    "            recs_list.update(top_k_items)\n",
+    "\n",
+    "        diversity_at_k = len(recs_list) / len(np.unique(edge_index[1].numpy()))\n",
+    "        print(f'Item coverage diversity for {model_mode_eval} @{k}:', diversity_at_k)\n",
+    "    \n",
+    "    for k in k_values:\n",
+    "        users_with_relevant_recs = set()\n",
+    "        \n",
+    "        for user_id in tqdm(user_ids, total=len(user_ids)):\n",
+    "            mask = edge_index[0] == user_id\n",
+    "            filtered_pred = pred[mask]\n",
+    "            sorted_indices = np.argsort(filtered_pred)[::-1]\n",
+    "            top_k_indices = sorted_indices[:k]\n",
+    "            filtered_ground_truth = ground_truth[mask] \n",
+    "            relevant_recs = filtered_ground_truth[top_k_indices] \n",
+    "            \n",
+    "            if np.sum(relevant_recs) > 0:  # At least one relevant recommendation\n",
+    "                users_with_relevant_recs.add(user_id)\n",
+    "        \n",
+    "        user_coverage_at_k = len(users_with_relevant_recs) / len(user_ids)\n",
+    "        print(f'User coverage for {model_mode_eval} @{k}:', user_coverage_at_k)\n",
+    "\n",
+    "    #######  Intra-List Diversity #######\n",
+    "    # TODO: Based on item_feat define the compute_dissimilarity method\n",
+    "    # for k in k_values:\n",
+    "    #     avg_dissimilarity = []\n",
+    "        \n",
+    "    #     for user_id in tqdm(user_ids, total=len(user_ids)):\n",
+    "    #         mask = edge_index[0] == user_id\n",
+    "    #         filtered_pred = pred[mask]\n",
+    "    #         filtered_items = edge_index[1][mask]\n",
+    "    #         sorted_indices = np.argsort(filtered_pred)[::-1]\n",
+    "    #         top_k_indices = sorted_indices[:k]\n",
+    "    #         top_k_items = filtered_items[top_k_indices].numpy()\n",
+    "            \n",
+    "    #         dissimilarity_sum = 0\n",
+    "    #         for i in range(len(top_k_items)):\n",
+    "    #             for j in range(i+1, len(top_k_items)):\n",
+    "    #                 dissimilarity_sum += compute_dissimilarity(top_k_items[i], top_k_items[j])\n",
+    "            \n",
+    "    #         if k > 1:\n",
+    "    #             avg_pairwise_dissimilarity = 2 * dissimilarity_sum / (k * (k - 1))\n",
+    "    #             avg_dissimilarity.append(avg_pairwise_dissimilarity)\n",
+    "        \n",
+    "    #     intra_list_diversity_at_k = np.mean(avg_dissimilarity)\n",
+    "    #     print(f'Intra-list diversity for {model_mode_eval} @{k}:', intra_list_diversity_at_k)\n",
+    "\n"
    ]
   },
   {
