--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -455,7 +455,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = 'all'"
+    "possible_experiments = ['none', 'diversity', 'ucsp', 'icsp']\n",
+    "experiment = possible_experiments[0]"
    ]
   },
   {
@@ -466,18 +467,12 @@
    "source": [
     "####### CSP EXPRIMENTS #######\n",
     "### CSP #### note: if the ratio==1, rerun from the first step\n",
-    "if experiment == 'csp':\n",
+    "if experiment == 'ucsp' or experiment == 'icsp':\n",
     "    def csp_test_gen(train_data, test_data, unique_data, entity_index, experiment_abbr):\n",
-    "        print(entity_index)\n",
-    "        print(experiment_abbr)\n",
     "        train_data_unique_entities = set(train_data['user', 'rates', 'item'].edge_label_index[entity_index].unique().numpy())\n",
-    "        print('1', len(train_data_unique_entities))\n",
     "        unique_entities = set(unique_data['mappedID'].unique())\n",
-    "        print('2', len(unique_entities))\n",
     "        entities_not_in_train = unique_entities - train_data_unique_entities\n",
-    "        print('3', len(entities_not_in_train))\n",
     "        mask = torch.tensor([entity in entities_not_in_train for entity in test_data[\"user\", \"rates\", \"item\"].edge_label_index[entity_index].numpy()])\n",
-    "        print(mask)\n",
     "        \n",
     "        test_data_filtered = copy.deepcopy(test_data)\n",
     "        test_data_filtered[\"user\", \"rates\", \"item\"].edge_label_index = test_data_filtered[\"user\", \"rates\", \"item\"].edge_label_index[:, mask]\n",
@@ -490,12 +485,7 @@
     "\n",
     "    test_data_csp, test_to_train_ratio_csp = csp_test_gen(\n",
     "        train_data, test_data, unique_user_id, 0 if experiment == 'ucsp' else 1, 'CSP-user' if experiment == 'ucsp' else 'CSP-item'\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "# TODO Contract Representation (effect of f top-keywords in contract_feat)\n",
-    "\n",
-    "# TODO Sparsity (keep users just with > h interactions)"
+    "    )"
    ]
   },
   {
@@ -867,150 +857,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/565 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1208.98it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HIT@1: 0.06725663716814159\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1225.65it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HIT@5: 0.13725663716814163\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1229.29it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HIT@10: 0.2058259587020649\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 917.96it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NDCG@1: 0.06725663716814159\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 915.54it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NDCG@5: 0.1021934474428921\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 880.42it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NDCG@10: 0.12600197631182014\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1447.86it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAP@1: 0.06725663716814159\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1441.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAP@5: 0.10710914454277286\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1428.60it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAP@10: 0.11671864025846325\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "####### METRIC EVAL #######\n",
     "model_mode_eval = 'gnn'\n",
@@ -1187,110 +1036,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/565 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1306.50it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Item coverage diversity for gnn @1: 0.042488619119878605\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1341.15it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Item coverage diversity for gnn @5: 0.11836115326251896\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1387.09it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Item coverage diversity for gnn @10: 0.21547799696509864\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1327.06it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User coverage for gnn @1: 0.06725663716814159\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1392.68it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User coverage for gnn @5: 0.17699115044247787\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1368.27it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User coverage for gnn @10: 0.27079646017699116\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "############# DIVERSITY EXPERIMENT ##############\n",
     "if experiment == 'diversity':\n",
     "    edge_index = test_data_all2all['user', 'rates', 'item'].edge_label_index\n",
     "    user_ids = np.unique(edge_index[0].numpy())\n",
