added sparcity experiment

--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -27,9 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/seankhatiri/sean2/venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "###### IMPORT #######\n",
     "import numpy as np\n",
@@ -59,143 +68,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "possible_experiments = ['none', 'diversity', 'ucsp', 'icsp', 'usparcity', 'isparcity']\n",
+    "possible_modes = ['debug', 'experiment']\n",
+    "model_variants = ['gnn', 'nmf', 'cmf']\n",
+    "\n",
+    "experiment = possible_experiments[4]\n",
+    "mode = possible_modes[0]\n",
+    "model_modes_eval = model_variants[0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([4343, 4338])\n",
-      "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "        ...,\n",
-      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "        [0., 1., 1.,  ..., 0., 0., 0.]])\n",
-      "                               name   \n",
-      "itemId                                \n",
-      "1                       TetherToken  \\\n",
-      "2       TransparentUpgradeableProxy   \n",
-      "3                       BridgeToken   \n",
-      "4                             Token   \n",
-      "5                           Seaport   \n",
-      "...                             ...   \n",
-      "4339                   GenesisVault   \n",
-      "4340                        LetsApe   \n",
-      "4341                        Isoroom   \n",
-      "4342                     AstroGator   \n",
-      "4343                  ZooFrenzToken   \n",
-      "\n",
-      "                                                 keywords   \n",
-      "itemId                                                      \n",
-      "1       dev, erc20, upgraded, address, oncode, title, ...  \\\n",
-      "2       proxy, admin, proxyadmin, implementation, dedi...   \n",
-      "3       beacon, _implementation_slot, erc1967, newimpl...   \n",
-      "4       dev, token, ierc20, supply, erc20, allowance, ...   \n",
-      "5       conduit, consideration, orders, order, 0age, i...   \n",
-      "...                                                   ...   \n",
-      "4339    00, 000, 0000, 000000000, 000000000000000000, ...   \n",
-      "4340    00, 000, 0000, 000000000, 000000000000000000, ...   \n",
-      "4341    room, integrity, publish, prove, genesis, seed...   \n",
-      "4342    eips, dev, basic, fungible, erc721, title, tok...   \n",
-      "4343    00, 000, 0000, 000000000, 000000000000000000, ...   \n",
-      "\n",
-      "                                       truncated_keywords  \n",
-      "itemId                                                     \n",
-      "1       dev, erc20, upgraded, address, oncode, title, ...  \n",
-      "2       proxy, admin, proxyadmin, implementation, dedi...  \n",
-      "3       beacon, _implementation_slot, erc1967, newimpl...  \n",
-      "4       dev, token, ierc20, supply, erc20, allowance, ...  \n",
-      "5       conduit, consideration, orders, order, 0age, i...  \n",
-      "...                                                   ...  \n",
-      "4339    00, 000, 0000, 000000000, 000000000000000000, ...  \n",
-      "4340    00, 000, 0000, 000000000, 000000000000000000, ...  \n",
-      "4341    room, integrity, publish, prove, genesis, seed...  \n",
-      "4342    eips, dev, basic, fungible, erc721, title, tok...  \n",
-      "4343    00, 000, 0000, 000000000, 000000000000000000, ...  \n",
-      "\n",
-      "[4343 rows x 3 columns]\n",
-      "         00   000   0000   000000000   000000000000000000   \n",
-      "itemId                                                      \n",
-      "1         0     0      0           0                    0  \\\n",
-      "2         0     0      0           0                    0   \n",
-      "3         0     0      0           0                    0   \n",
-      "4         0     0      0           0                    0   \n",
-      "5         0     0      0           0                    0   \n",
-      "...     ...   ...    ...         ...                  ...   \n",
-      "4339      0     1      1           1                    1   \n",
-      "4340      0     1      1           1                    1   \n",
-      "4341      0     0      0           0                    0   \n",
-      "4342      0     0      0           0                    0   \n",
-      "4343      0     1      1           1                    1   \n",
-      "\n",
-      "         000000000000000000000000000000000000000000000000000000000004cce0   \n",
-      "itemId                                                                      \n",
-      "1                                                       0                  \\\n",
-      "2                                                       0                   \n",
-      "3                                                       0                   \n",
-      "4                                                       0                   \n",
-      "5                                                       0                   \n",
-      "...                                                   ...                   \n",
-      "4339                                                    1                   \n",
-      "4340                                                    1                   \n",
-      "4341                                                    0                   \n",
-      "4342                                                    0                   \n",
-      "4343                                                    1                   \n",
-      "\n",
-      "         000000004294967296   0001   000281474976710656   00100000  ...  ymm   \n",
-      "itemId                                                              ...        \n",
-      "1                         0      0                    0          0  ...    0  \\\n",
-      "2                         0      0                    0          0  ...    0   \n",
-      "3                         0      0                    0          0  ...    0   \n",
-      "4                         0      0                    0          0  ...    0   \n",
-      "5                         0      0                    0          0  ...    0   \n",
-      "...                     ...    ...                  ...        ...  ...  ...   \n",
-      "4339                      1      1                    1          1  ...    0   \n",
-      "4340                      1      1                    1          1  ...    0   \n",
-      "4341                      0      0                    0          0  ...    0   \n",
-      "4342                      0      0                    0          0  ...    0   \n",
-      "4343                      1      1                    1          1  ...    0   \n",
-      "\n",
-      "        zeppelin  zerion  zero  zombie  zoo  zora  zx  контракта  ꁒꍟ  \n",
-      "itemId                                                                \n",
-      "1              0       0     0       0    0     0   0          0   0  \n",
-      "2              0       0     0       0    0     0   0          0   0  \n",
-      "3              0       0     0       0    0     0   0          0   0  \n",
-      "4              0       0     0       0    0     0   0          0   0  \n",
-      "5              0       0     0       0    0     0   0          0   0  \n",
-      "...          ...     ...   ...     ...  ...   ...  ..        ...  ..  \n",
-      "4339           0       0     0       0    0     0   0          0   0  \n",
-      "4340           0       0     0       0    0     0   0          0   0  \n",
-      "4341           0       0     0       0    0     0   0          0   0  \n",
-      "4342           0       0     0       0    0     0   0          0   0  \n",
-      "4343           0       0     0       0    0     0   0          0   0  \n",
-      "\n",
-      "[4343 rows x 4338 columns]\n",
-      "Mapping of user IDs to consecutive values:\n",
-      "==========================================\n",
-      "                                       userId  mappedID\n",
-      "0  0xc23d11e5ae70a680f6f3e278503007dbae4b868c         0\n",
-      "1  0x365782e192de5abdd3183da25d2e94a2641a616d         1\n",
-      "2  0xe03795684f8be6c958ea8c389be07ecd4eb89848         2\n",
-      "3  0x3811b30aff6af58314bb8864d0f455a4089c6331         3\n",
-      "4  0xb6a990a19b69ba982f0b4a1bebbce212e337da9f         4\n",
-      "\n",
-      "Mapping of item IDs to consecutive values:\n",
-      "===========================================\n",
-      "                        itemId  mappedID\n",
-      "0                  TetherToken         0\n",
-      "1  TransparentUpgradeableProxy         1\n",
-      "2                  BridgeToken         2\n",
-      "3                        Token         3\n",
-      "4                      Seaport         4\n",
-      "\n",
-      "Final edge indices pointing from users to items:\n",
-      "=================================================\n",
-      "tensor([[   0,    1,    1,  ..., 1139, 1139, 1139],\n",
-      "        [   0,    1,    2,  ..., 4342,  129, 4308]])\n"
+      "user sparcity value is: 0.950423943918249\n",
+      "item feature tensor shape torch.Size([698, 1489])\n",
+      "number of unique users 68\n",
+      "number of unique items 698\n"
      ]
     }
    ],
@@ -205,25 +104,23 @@
     "from torch import Tensor\n",
     "\n",
     "def data_loader(ratings_df):\n",
-    "    # Create a mapping from unique user indices to range [0, num_user_nodes):\n",
     "    unique_user_id = ratings_df['userId'].unique()\n",
     "    unique_user_id = pd.DataFrame(data={\n",
     "        'userId': unique_user_id,\n",
     "        'mappedID': pd.RangeIndex(len(unique_user_id)),\n",
     "    })\n",
-    "    print(\"Mapping of user IDs to consecutive values:\")\n",
-    "    print(\"==========================================\")\n",
-    "    print(unique_user_id.head())\n",
-    "    print()\n",
-    "    # Create a mapping from unique movie indices to range [0, num_movie_nodes):\n",
+    "    # print(\"Mapping of user IDs to consecutive values:\")\n",
+    "    # print(\"==========================================\")\n",
+    "    # print(unique_user_id.head())\n",
+    "\n",
     "    unique_item_id = ratings_df['itemId'].unique()\n",
     "    unique_item_id = pd.DataFrame(data={\n",
     "        'itemId': unique_item_id,\n",
     "        'mappedID': pd.RangeIndex(len(unique_item_id)),\n",
     "    })\n",
-    "    print(\"Mapping of item IDs to consecutive values:\")\n",
-    "    print(\"===========================================\")\n",
-    "    print(unique_item_id.head())\n",
+    "    # print(\"Mapping of item IDs to consecutive values:\")\n",
+    "    # print(\"===========================================\")\n",
+    "    # print(unique_item_id.head())\n",
     "\n",
     "    ratings_user_id = pd.merge(ratings_df['userId'], unique_user_id,\n",
     "                                left_on='userId', right_on='userId', how='left')\n",
@@ -231,14 +128,11 @@
     "    ratings_item_id = pd.merge(ratings_df['itemId'], unique_item_id,\n",
     "                                left_on='itemId', right_on='itemId', how='left')\n",
     "    ratings_item_id = torch.from_numpy(ratings_item_id['mappedID'].values)\n",
-    "    # With this, we are ready to construct our `edge_index` in COO format\n",
-    "    # following PyG semantics:\n",
     "    edge_index_user_to_item = torch.stack([ratings_user_id, ratings_item_id], dim=0)\n",
-    "    # assert edge_index_user_to_item.size() == (2, 100836)\n",
-    "    print()\n",
-    "    print(\"Final edge indices pointing from users to items:\")\n",
-    "    print(\"=================================================\")\n",
-    "    print(edge_index_user_to_item)\n",
+    "    # print()\n",
+    "    # print(\"Final edge indices pointing from users to items:\")\n",
+    "    # print(\"=================================================\")\n",
+    "    # print(edge_index_user_to_item)\n",
     "    return unique_user_id, unique_item_id, edge_index_user_to_item\n",
     "\n",
     "def movie_loader():\n",
@@ -261,7 +155,30 @@
     "\n",
     "def contract_loader():\n",
     "    items_ratings_df = pd.read_parquet('dataset/user_contract_rating.parquet')\n",
-    "    items_ratings_df = items_ratings_df[:10000]\n",
+    "    def calculate_sparcity_value(df):\n",
+    "        num_users = df['user'].nunique()\n",
+    "        num_items = df['item'].nunique()\n",
+    "        num_interactions = len(df)\n",
+    "        total_possible_interactions = num_users * num_items / 100\n",
+    "        sparsity = 1 - (num_interactions / total_possible_interactions)\n",
+    "        return sparsity\n",
+    "    \n",
+    "    def filter_interactions(df, column, k):\n",
+    "        valid_entries = df[column].value_counts()\n",
+    "        valid_entries = valid_entries[valid_entries > k]\n",
+    "        df = df[df[column].isin(valid_entries.index)]\n",
+    "        print(f'{column} sparcity value is:', calculate_sparcity_value(df))\n",
+    "        return df\n",
+    "\n",
+    "    ########## SPARCITY EXPERIMENT ###########\n",
+    "    if experiment == 'usparcity':\n",
+    "        k = 5\n",
+    "        items_ratings_df = filter_interactions(items_ratings_df, 'user', k)\n",
+    "    elif experiment == 'isparcity':\n",
+    "        k = 5\n",
+    "        items_ratings_df = filter_interactions(items_ratings_df, 'item', k)\n",
+    "\n",
+    "    items_ratings_df = items_ratings_df[:1000] if mode == 'debug' else items_ratings_df\n",
     "    items_df = {}\n",
     "    items_df['name'] = items_ratings_df['item'].unique()\n",
     "    items_df['itemId'], unique_names = pd.factorize(items_df['name'])\n",
@@ -274,16 +191,15 @@
     "    contracts_df_top_words['keywords'] = contracts_df_top_words['keywords'].fillna('')\n",
     "    items_df = contracts_df_top_words\n",
     "    items_df.set_index('itemId', inplace=True)\n",
-    "    # f =5\n",
+    "    # f =5 # ratio to determine the number of top keywords selected for each contract to construct item_feat\n",
     "    items_df['truncated_keywords'] = items_df['keywords'].apply(lambda x: ','.join(x.split(',')))\n",
     "    X_df = items_df['truncated_keywords'].str.get_dummies(',')\n",
     "    item_feat = torch.from_numpy(X_df.values).to(torch.float)\n",
-    "    print(item_feat.shape)\n",
-    "    print(item_feat)\n",
-    "    print(items_df)\n",
-    "    print(X_df)\n",
+    "    print('item feature tensor shape', item_feat.shape)\n",
     "    items_ratings_df = items_ratings_df.rename(columns={'user': 'userId', 'item': 'itemId'})\n",
     "    unique_user_id, unique_item_id, edge_index_user_to_item = data_loader(items_ratings_df)\n",
+    "    print('number of unique users', len(unique_user_id))\n",
+    "    print('number of unique items', len(unique_item_id))\n",
     "    return unique_user_id, unique_item_id, edge_index_user_to_item, items_df, item_feat\n",
     "\n",
     "universal_mode = 'contract'\n",
@@ -437,6 +353,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sparcity experiment TODO\n",
+    "# if we just keep users that had more than x interactions, or items with than y interactions -> how the matrix sparcity will change? what can be a good plot to demonstrate it?\n",
+    "# create a tabel with two main sections: user sparcity, and item sparcity, we will see if the sparcity value decrease how the Hit@k and NDCG@k will improve\n",
+    "num_users = data['user'].nunique()\n",
+    "num_items = data['item'].nunique()\n",
+    "num_interactions = len(data)\n",
+    "\n",
+    "# Total possible interactions is num_users * num_items\n",
+    "total_possible_interactions = num_users * num_items\n",
+    "\n",
+    "# Sparsity is 1 minus (observed interactions / possible interactions)\n",
+    "sparsity = 1 - (num_interactions / total_possible_interactions)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -447,16 +383,6 @@
     "# item_feat = torch.zeros_like(item_feat)\n",
     "\n",
     "data, train_data, test_data = train_test_generator(unique_user_id, items_df, item_feat, edge_index_user_to_item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "possible_experiments = ['none', 'diversity', 'ucsp', 'icsp']\n",
-    "experiment = possible_experiments[0]"
    ]
   },
   {
@@ -862,7 +788,6 @@
    "outputs": [],
    "source": [
     "####### METRIC EVAL #######\n",
-    "model_mode_eval = 'gnn'\n",
     "\n",
     "def precision_at_k(user_id, sorted_indices, ground_truth, k):\n",
     "    top_k_indices = sorted_indices[:k]\n",
