--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "possible_experiments = ['none', 'diversity', 'ucsp', 'icsp', 'usparcity', 'isparcity']\n",
+    "possible_experiments = ['none', 'diversity', 'ucsp', 'icsp', 'usparcity', 'isparcity', 'sBERT']\n",
     "possible_modes = ['debug', 'experiment']\n",
     "model_variants = ['gnn', 'nmf', 'cmf']\n",
     "\n",
@@ -185,16 +185,21 @@
     "    items_df['itemId'] = items_df['itemId'] + 1\n",
     "    items_df = pd.DataFrame(items_df, columns=['itemId', 'name'])\n",
     "\n",
-    "    contract_top_words_df = pd.read_parquet('dataset/contract_top_words.parquet')\n",
-    "    contract_top_words_df = contract_top_words_df.rename(columns={'contract_name': 'name'})\n",
-    "    contracts_df_top_words = items_df.merge(contract_top_words_df, on='name', how='left')\n",
-    "    contracts_df_top_words['keywords'] = contracts_df_top_words['keywords'].fillna('')\n",
-    "    items_df = contracts_df_top_words\n",
-    "    items_df.set_index('itemId', inplace=True)\n",
-    "    # f =5 # ratio to determine the number of top keywords selected for each contract to construct item_feat\n",
-    "    items_df['truncated_keywords'] = items_df['keywords'].apply(lambda x: ','.join(x.split(',')))\n",
-    "    X_df = items_df['truncated_keywords'].str.get_dummies(',')\n",
-    "    item_feat = torch.from_numpy(X_df.values).to(torch.float)\n",
+    "    # TODO: add sBERT instead of this\n",
+    "    if experiment == 'sBERT':\n",
+    "        \n",
+    "    else:\n",
+    "        contract_top_words_df = pd.read_parquet('dataset/contract_top_words.parquet')\n",
+    "        contract_top_words_df = contract_top_words_df.rename(columns={'contract_name': 'name'})\n",
+    "        contracts_df_top_words = items_df.merge(contract_top_words_df, on='name', how='left')\n",
+    "        contracts_df_top_words['keywords'] = contracts_df_top_words['keywords'].fillna('')\n",
+    "        items_df = contracts_df_top_words\n",
+    "        items_df.set_index('itemId', inplace=True)\n",
+    "        # f =5 # ratio to determine the number of top keywords selected for each contract to construct item_feat\n",
+    "        items_df['truncated_keywords'] = items_df['keywords'].apply(lambda x: ','.join(x.split(',')))\n",
+    "        X_df = items_df['truncated_keywords'].str.get_dummies(',')\n",
+    "        item_feat = torch.from_numpy(X_df.values).to(torch.float)\n",
+    "\n",
     "    print('item feature tensor shape', item_feat.shape)\n",
     "    items_ratings_df = items_ratings_df.rename(columns={'user': 'userId', 'item': 'itemId'})\n",
     "    unique_user_id, unique_item_id, edge_index_user_to_item = data_loader(items_ratings_df)\n",
